arreglo de mascota controller